전체 수정